snapshots/care/data4life/hc-util-sdk-kmp/error/1.14.0-SNAPSHOT/error-1.14.0-20220831.180107-1-all.jar.sha1
d1d3aca299839ac739b5e8b09adf7353421fdda5